...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Master-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="7bK-jq-Zjz" kind="relationship" relationship="rootViewController" id="tsl-Nk-0bq"/>
...
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="7bK-jq-Zjz" id="Gho-Na-rnu"/>
                            <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Menu" id="Zdf-7t-Un8"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="620" y="-627"/>
        </scene>
        <!--Information-->
...
                            <constraint firstItem="EGw-M8-gSW" firstAttribute="bottom" secondItem="ikj-UT-maM" secondAttribute="bottom" id="Fio-8G-HDq"/>
                            <constraint firstItem="EGw-M8-gSW" firstAttribute="leading" secondItem="ikj-UT-maM" secondAttribute="leading" id="Hin-RD-H5F"/>
                            <constraint firstItem="EGw-M8-gSW" firstAttribute="top" secondItem="ikj-UT-maM" secondAttribute="top" id="z53-iA-TAG"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="ikj-UT-maM"/>
                    </view>
                    <navigationItem key="navigationItem" title="Information" id="zIa-Mp-g2C"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
                        <outlet property="txtInfo" destination="EGw-M8-gSW" id="NEZ-a8-iBC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="49E-fC-h4N" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="MNn-YL-ltp" firstAttribute="bottom" secondItem="7bf-1V-FVm" secondAttribute="bottom" id="Tmu-TY-zzF"/>
                            <constraint firstItem="MNn-YL-ltp" firstAttribute="leading" secondItem="7bf-1V-FVm" secondAttribute="leading" id="Vq7-10-dpd"/>
                            <constraint firstItem="3XJ-sk-rNV" firstAttribute="leading" secondItem="7bf-1V-FVm" secondAttribute="leading" constant="16" id="uih-DY-zOb"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="7bf-1V-FVm"/>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="f4C-WE-2yX"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
                        <outlet property="collectionView" destination="MNn-YL-ltp" id="qFJ-dq-Z14"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="C78-T9-eQh" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lMR-Ns-3y9" customClass="RoundedLabel" customModule="DogYears" custom
                                <rect key="frame" x="16" y="58" width="671.5" height="42"/>
                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="result"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="2Kk-ca-tN8"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
...
                                            <rect key="frame" x="0.0" y="0.0" width="993" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ztH-Cs-4YA">
                                                    <rect key="frame" x="16" y="7" width="969" height="30"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <state key="normal" title="Rate Us On the App Store">
                                                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="rate" destination="2hT-yA-Spg" eventType="touchUpInside" id="pdC-Eh-Npo"/>
                                                    </connections>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="2hT-yA-Spg" id="ueC-zB-2dy"/>
                            <outlet property="delegate" destination="2hT-yA-Spg" id="qJf-Ct-7sm"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="About" id="erH-Z3-kM0"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
                        <outlet property="lblVersion" destination="vLA-kS-fQZ" id="O0V-gV-eJa"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fDs-53-2ul" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
